// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandBar renders renders, shows copy button insecure origin message: false 1`] = `
<DocumentFragment>
  <div
    class="insights-dialog-target-button-container"
  >
    <mock-button>
      <mock-filehtmlicon />
      <div
        class="ms-Button-label"
      >
        Inspect HTML
      </div>
    </mock-button>
    <mock-copyissuedetailsbutton
      deps="[object Object]"
      issuedetailsdata="[object Object]"
    />
    <mock-issuefilingbutton
      deps="[object Object]"
      issuedetailsdata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`CommandBar renders renders, shows copy button insecure origin message: false: IssueFilingButton props 1`] = `
{
  "deps": {
    "axeResultToIssueFilingDataConverter": [typemoq mock object],
  },
  "issueDetailsData": {},
  "needsSettingsContentRenderer": [Function],
  "userConfigurationStoreData": {
    "bugService": "None",
    "isFirstTime": false,
  },
}
`;

exports[`CommandBar renders renders, shows copy button insecure origin message: true 1`] = `
<DocumentFragment>
  <div
    class="insights-dialog-target-button-container"
  >
    <mock-button>
      <mock-filehtmlicon />
      <div
        class="ms-Button-label"
      >
        Inspect HTML
      </div>
    </mock-button>
    <mock-copyissuedetailsbutton
      deps="[object Object]"
      issuedetailsdata="[object Object]"
    />
    <mock-issuefilingbutton
      deps="[object Object]"
      issuedetailsdata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <div
      class="copy-issue-details-button-help"
      role="alert"
    >
      To copy failure details, first open the Accessibility Insights for Web page.
    </div>
  </div>
</DocumentFragment>
`;

exports[`CommandBar renders renders, shows copy button insecure origin message: true: IssueFilingButton props 1`] = `
{
  "deps": {
    "axeResultToIssueFilingDataConverter": [typemoq mock object],
  },
  "issueDetailsData": {},
  "needsSettingsContentRenderer": [Function],
  "userConfigurationStoreData": {
    "bugService": "None",
    "isFirstTime": false,
  },
}
`;

exports[`CommandBar renders renders, shows inspect button message: false 1`] = `
<DocumentFragment>
  <div
    class="insights-dialog-target-button-container"
  >
    <mock-button>
      <mock-filehtmlicon />
      <div
        class="ms-Button-label"
      >
        Inspect HTML
      </div>
    </mock-button>
    <mock-copyissuedetailsbutton
      deps="[object Object]"
      issuedetailsdata="[object Object]"
    />
    <mock-issuefilingbutton
      deps="[object Object]"
      issuedetailsdata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`CommandBar renders renders, shows inspect button message: false: IssueFilingButton props 1`] = `
{
  "deps": {
    "axeResultToIssueFilingDataConverter": [typemoq mock object],
  },
  "issueDetailsData": {},
  "needsSettingsContentRenderer": [Function],
  "userConfigurationStoreData": {
    "bugService": "None",
    "isFirstTime": false,
  },
}
`;

exports[`CommandBar renders renders, shows inspect button message: true 1`] = `
<DocumentFragment>
  <div
    class="insights-dialog-target-button-container"
  >
    <mock-button>
      <mock-filehtmlicon />
      <div
        class="ms-Button-label"
      >
        Inspect HTML
      </div>
    </mock-button>
    <mock-copyissuedetailsbutton
      deps="[object Object]"
      issuedetailsdata="[object Object]"
    />
    <mock-issuefilingbutton
      deps="[object Object]"
      issuedetailsdata="[object Object]"
      userconfigurationstoredata="[object Object]"
    />
    <div
      class="insights-dialog-inspect-disabled"
      role="alert"
    >
      To use the Inspect HTML button, first open the developer tools (dev-tools-shortcut).
    </div>
  </div>
</DocumentFragment>
`;

exports[`CommandBar renders renders, shows inspect button message: true: IssueFilingButton props 1`] = `
{
  "deps": {
    "axeResultToIssueFilingDataConverter": [typemoq mock object],
  },
  "issueDetailsData": {},
  "needsSettingsContentRenderer": [Function],
  "userConfigurationStoreData": {
    "bugService": "None",
    "isFirstTime": false,
  },
}
`;
